# web-crawler

./: Cargo.toml  Dockerfile  README.md
src/: lib.rs  url_summary.rs
