[package]
name = "web-crawler"
version = "0.1.0"
authors = ["Daniel Mason <daniel@danielmason.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.2.18"
scraper = "0.10.1"
reqwest = "0.9.19"
actix-web = "1.0.5"
serde = "1.0.98"
serde_json = "1.0.40"
percent-encoding = "2.1.0"
