[package]
name = "web-crawler"
version = "0.1.0"
authors = ["Daniel Mason <daniel@danielmason.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0.5"
dotenv = "0.14.1"
futures = "0.1.28"
percent-encoding = "2.1.0"
reqwest = "0.9.19"
scraper = "0.10.1"
serde = "1.0.98"
structopt = "0.2.18"
# Add openssl-sys as a direct dependency so it can be cross compiled to
# x86_64-unknown-linux-musl using the "vendored" feature below
openssl-sys = "0.9.48"

[features]
# Force openssl-sys to staticly link in the openssl library. Necessary when
# cross compiling to x86_64-unknown-linux-musl.
vendored = ["openssl-sys/vendored"]
